# passalways-installers-and-extensions

./: README.md  manifest.firefox.json  manifest.json  passalways-firefox.xpi
assets/: popup-CS1ohnqe.css
background/: background.html  service-worker-firefox.ts  service-worker.js  service-worker.ts
content/: content-script.js  content-script.ts  content-styles.css  form-detector.ts  password-change-handler.ts  signin-handler.ts  signup-handler.ts  totp-autofill-handler.ts  totp-modal.ts  utils.ts  webauthn-handler.js  webauthn-handler.ts  webauthn-main.js  webauthn-main.ts
installers/: passalways-firefox.xpi
popup/: popup-styles.css  popup.html  popup.js  popup.tsx  settings.tsx  setup-wizard.tsx
src-wasm/: CODE_ANALYSIS.md  Cargo.toml
src-wasm/src/: crypto.rs  lib.rs
