# PassMemo Browser Extension - WebAssembly Core
# Co-Authored-By: Project Engineer MelAnee Hannah

[package]
name = "passmemo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

# Crypto dependencies (same as desktop app)
blake3 = "1.5"
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "2.0"

# Password hashing
password-hash = "0.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
